added gitignore changed styling for experience and about sections

--- a/index.html
+++ b/index.html
@@ -74,14 +74,7 @@
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
-      <div class="section-container">
-        <div class="section__pic-container">
-          <img
-            src="./assets/jaedon.jpeg"
-            alt="Profile picture"
-            class="about-pic"
-          />
-        </div>
+      <div class="section-container" style="padding-right: 20vw; padding-left: 20vw;">
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
@@ -94,7 +87,7 @@
               <p>Pursuing a BASc in Management Engineering</p>
             </div>
           </div>
-          <div class="text-container">
+          <div class="text-container" style="font-size: larger;">
             <p>
                 I'm a first-year Management Engineering student at the University of Waterloo, passionate about leveraging technology and data to solve complex problems. With a keen interest in coding, design, and analytics, I'm eager to explore how engineering principles can drive innovation in business.
             </p>
@@ -114,13 +107,24 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 style="color: #000000" class="experience-sub-title">TKS Innovator</h2>
-            <h3 style="color: #505050">Part of a global community filled with the world's most ambitious young people who want to make an impact using emerging technologies and sciences.</h3>
+            <h2 style="color: #000000" class="experience-sub-title">IT Software Development & Support - Ammu IT Consulting</h2>
+            <h3 style="color: #505050">June 2024 - August 2024: Created SQL queries and integrated Gong with a CRM using APIs without first-party support. Assisted with customer tickets involving Crystal Reports.</h3>
           </div>
           <div class="details-container">
-            <h2 style="color:#000000" class="experience-sub-title">Frontend Development</h2>
-            <h3 style="color: #505050">Part of a global community filled with the world's most ambitious young people who want to make an impact using emerging technologies and sciences.</h3>
-          
+            <h2 style="color:#000000" class="experience-sub-title">Volunteer (Tech) - Scarborough Health Network (SHN)</h2>
+            <h3 style="color: #505050">December 2022 - June 2024: Collaborated with a team to build a wayfinding tool for the hospital network as part of a student software development project.</h3>
+          </div>
+          <div class="details-container">
+            <h2 style="color:#000000" class="experience-sub-title">Robotics Instructor (Volunteer) - Holland Bloorview Kids Rehabilitation Hospital</h2>
+            <h3 style="color: #505050">January 2024 - May 2024: Helped youth with disabilities develop social-emotional and STEAM skills using robotic LEGO for problem-solving challenges.</h3>
+          </div>
+          <div class="details-container">
+            <h2 style="color:#000000" class="experience-sub-title">Executive Web Developer (Volunteer) - Youth Professionals</h2>
+            <h3 style="color: #505050">December 2020 - June 2021: Led a team of 4 to develop a website using HTML and CSS for a youth-run organization supporting BIPOC and LGBTQ+ youth.</h3>
+          </div>
+          <div class="details-container">
+            <h2 style="color:#000000" class="experience-sub-title">Estimator (Co-op Student) - Ellis Don Construction Ltd</h2>
+            <h3 style="color: #505050">March 2023 - June 2023: Conducted quantity surveys using Bluebeam, reviewed engineering drawings, and calculated project costs.</h3>
           </div>
         </div>
       </div>
@@ -128,9 +132,10 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#projects'"
+        onclick="location.href='./#contact'"
       />
     </section>
+<!--     
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
@@ -216,7 +221,7 @@
         class="icon arrow"
         onclick="location.href='./#contact'"
       />
-    </section>
+    </section> -->
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
@@ -227,7 +232,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:jaedon.visva2006@gmail.com">jaedon.visva2006@gmail.com</a></p>
+          <p><a href="mailto:jaedon.visva2006@gmail.com">Email</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -250,7 +255,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 Jaedon Visva. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Jaedon Visva. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
